# e3nn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CITATION.bib  CONTRIBUTING.md  ChangeLog.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  SE3.py  SO3.py  basis_kernels.py  cache_file.py  code_of_conduct.md  codecov.yml  convolution.py  gen_cache.py  hatch.toml  measure sub-sampling error.ipynb  pack.py  profile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_cuda.py  setup_helper.py
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  config.yml  feature_request.md  project-wanted.md  question.md
.github/workflows/: pull_request.yml  push.yml  pythonpackage.yml  release.yml  style.yaml  tests.yml
arch/: .gitignore  c1.py  c10.py  c11.py  c12.py  c13.py  c14.py  c15.py  c16.py  c17.py  c2.py  c3.py  c4.py  c5.py  c6.py  c7.py  c8.py  c9.py  cath.py  example.py  example_norm.py  gdb9.py  lung1.py  miccai12.py  qm7.py  se3cnn1.py
arch/baseline/: b10.py  b7.py  b8.py  b9.py
arch/old/: a1.py  a10.py  a11.py  a12.py  a13.py  a14.py  a15.py  a16.py  a17.py  a18.py  a2.py  a3.py  a4.py  a5.py  a6.py  a7.py  a8.py  a9.py  m1.py  m10.py  m11.py  m12.py  m13.py  m14.py  m15.py  m16.py  m17.py  m2.py  m3.py  m4.py  m5.py  m6.py  m7.py  m8.py  m9.py
doc/: conf.py  index.md  installation.md  requirements.txt
doc/api/: api.rst  image.rst  networks.rst  non_linearities.rst  o3.rst  point.rst  rs.rst  rsh.rst  tensor.rst
docs/: conf.py  index.md  index.rst  requirements.txt
docs/api/: e3nn.rst  io.rst  math.rst
docs/examples/: examples.rst  model_gate.rst  periodic_boundary_conditions.rst  tetris_gate.rst  tetris_polynomial.rst
docs/guide/: attention.rst  change_of_basis.rst  convolution.rst  equivar_testing.rst  first_steps.ipynb  guide.rst  installation.md  interactions.ipynb  irreps.rst  jit.ipynb  jit.rst  normalization.rst  parity_sphericaltensor.ipynb  periodic_boundary_conditions.rst  spherical_tensor_parity.ipynb  transformer.rst
e3nn/: SO3.py  __init__.py  batchnorm.py  data_helpers.py  dropout.py  groupnorm.py  irrep_tensor.py  kernel.py  kernel_mod.py  linear.py  linear_mod.py  message_passing.py  networks.py  o3.py  perm.py  radial.py  rs.py  rsh.py  s2grid.py  soft.py  spherical_harmonics.py  spherical_tensor.py  tensor.py  tensor_block.py  tensor_product.py  variable_networks.py
e3nn/experimental/: __init__.py  _basic.py  _full_tp.py  _linear.py  _tp.py
e3nn/group/: algebra.py  reduce_tensor.py
e3nn/image/: convolution.py  filter.py  gated_activation.py  gated_block.py  kernel.py  norm_block.py
e3nn/io/: __init__.py  _cartesian_tensor.py  _spherical_tensor.py  cartesian_tensor.py  spherical_tensor.py
e3nn/math/: __init__.py  _bessel.py  _linalg.py  _normalize_activation.py  _reduce.py  _soft_one_hot_linspace.py  _soft_unit_step.py  basis.py  linalg.py  normalize_activation.py  perm.py  soft_heaviside.py  soft_one_hot.py  swish.py
e3nn/networks/: __init__.py  gate.py  image.py  point.py  s2.py
e3nn/nn/: __init__.py  _activation.py  _batchnorm.py  _dropout.py  _extract.py  _fc.py  _gate.py  _identity.py  _normact.py  _s2act.py  _so3act.py  batchnorm.py  cut.py  extract.py  fc.py  gate.py  identity.py  normact.py  s2act.py  tensor_product.py
e3nn/non_linearities/: __init__.py  activation.py  gated_block.py  gated_block_parity.py  gru.py  multiplication.py  norm.py  norm_activation.py  rescaled_act.py  s2.py  scalar_activation.py  self_interaction.py  so3.py  tensor_product.py
e3nn/o3/: __init__.py  _angular_spherical_harmonics.py  _basic.py  _fused_spherical_harmonics.py  _irreps.py  _irreps_array.py  _linear.py  _norm.py  _reduce.py  _rotation.py  _s2grid.py  _so3grid.py  norm.py  (+15 more)
examples/: README.md  animated_rsh.py  atom_types.py  conftest.py  example.py  gravity.ipynb  gravity_with_backwardable.ipynb  missing_point_batch.ipynb.REMOVED.git-id  model_gate.py  plot_kernels.py  tensor_product_benchmark.py  tensor_product_benchmark_jax.py  tensor_product_profile.py  tetris.py  tetris_gate.py  tetris_point.py  tetris_point_backwardable.py  tetris_point_nn.py  tetris_point_noNL.py  tetris_point_noNL_backwardable.py  tetris_polynomial.py  visualize.py  voxel_convolution.py
experiments/: .gitignore
notebook/: .gitignore  analytical_kernel_tests.ipynb  equivariance_tests.ipynb.REMOVED.git-id  plot kernels.ipynb
se3_cnn/: SE3.py  SO3.py  SO3.pyx  __init__.py  basis_kernels.py  basis_kernels.pyx  batchnorm.py  bn_conv.py  cache_file.py  convolution.py  dropout.py  groupnorm.py  nonlin.py
se3cnn/: SO3.py  __init__.py  basis_kernels.py  batchnorm.py  bnorm_tests.py  conv_tests.py  convolution.py  dropout.py  filter.py  groupnorm.py  kernel.py  parity.py  point_kernel.py  point_kernel_split.py  point_kernel_vec.py  point_radial.py  point_two_layer_kernel.py  point_utils.py  radial.py  self_interaction.py  spherical_harmonics.py  test_utils.py
tests/: README.md  SO3_tests.py  all  all.py  batchnorm_test.py  batchnorm_tests.py  cartesian_spherical_harmonics_test.py  conftest.py  convolution_tests.py  data_helpers_test.py  defaults_test.py  dropout_test.py  dropout_tests.py  equivariance_mod_test.py  equivariance_test.py  fc_test.py  gated_block_test.py  gated_block_tests.py  group_test.py  groupnorm_test.py  import_test.py  kernel_test.py  kernel_tests.py  linear_test.py  message_passing_test.py  models_test.py  networks_test.py  normalization_test.py  normalization_tests.py  o3_test.py  perm_test.py  readme_example_test.py  reduce_tensor_test.py  rotation_test.py  rs_test.py  rsh_test.py  s2act_test.py  s2grid_test.py  self_interation_tests.py  so3_test.py  (+6 more)
toy_dataset/: .gitignore  augment.py  generate.py  mini_datasets.py
(+1348 files in other folders)
